@@ -1,3 +1,11 @@
+2003-08-24  Andrew Cagney  <cagney@redhat.com>
+
+	* arm-tdep.c (_initialize_arm_tdep): Simplify by assuming
+	GDB_MULTI_ARCH is always non-zero.
+	* osabi.c (_initialize_gdb_osabi): Ditto.
+	(gdbarch_init_osabi): Ditto.
+	* sparc-tdep.c: Ditto for #if code.
+
 2003-08-23  Mark Kettenis  <kettenis@gnu.org>
 
 	* x86-64-tdep.c (x86_64_supply_fxsave): Add `regnum' argument.
